--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,68 @@
-// TODO
+.Container {
+  width: 100%;
+
+  article {
+    max-width: 1120px;
+    margin: 5rem auto;
+  }
+}
+
+.bannerWrapper{
+  position: relative;
+  flex-direction: column;
+  min-height: 400px;
+  overflow: hidden;
+  padding: 100px 0 75px;
+
+  .banner_picture{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
+    img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+      object-fit: cover;
+    }
+  }
+}
+
+.Content_post {
+  h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    letter-spacing: -0.03125rem;
+  }
+
+  .post_content {
+    margin-top: 4rem;
+
+    h1 {
+      margin-bottom: 2.25rem;
+
+      font-size: 2.25rem;
+      font-weight: 700;
+    }
+
+    p {
+      margin-bottom: 1.125rem;
+
+      font-size: 1.125rem;
+      font-weight: 400;
+      line-height: 1.36125rem;
+
+      color: var(--gray-100);
+    }
+
+    a {
+      color: var(--pink-900);
+    }
+  }
+}
