--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -44,7 +44,7 @@
   .post_content {
     margin-top: 4rem;
 
-    h1 {
+    h2 {
       margin-bottom: 2.25rem;
 
       font-size: 2.25rem;
@@ -63,6 +63,13 @@
 
     a {
       color: var(--pink-900);
+    }
+
+    ul {
+      margin-left: 25px;
+      margin-bottom: 18px;
+
+      line-height: 30px;
     }
   }
 }
